--- a/login.html
+++ b/login.html
@@ -12,46 +12,62 @@
     <script src="./js/profile.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/login.js"></script>
-    <link rel="stylesheet" href="./css/profile.css">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary" style="display: none;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./messages.html">Posts</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./new.html">Add-Post</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Account
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./signup.html">Sign-Up</a></li>
-                  <li><a class="dropdown-item" href="./login.html">Login</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="./profile.html">Profile</a></li>
+            <a class="navbar-brand" href="#"><h1>APROKO</h1></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./messages.html">Posts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./new.html">Add-Post</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Account
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="./signup.html">Sign-Up</a></li>
+                            <li><a class="dropdown-item" href="./login.html">Login</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="./profile.html">Profile</a></li>
+                        </ul>
+                    </li>
                 </ul>
-              </li>
-            </ul>
-          </div>
+            </div>
         </div>
-    </nav>
-    <main>
-        <label><span>Username/Email</span><input id="username" type="email"></label>
-        <label><span>Password</span><input id="password" type="password"></label>
-        <button id="loginButton">Login</button>
-        <div id="output">?</div>
-    </main>
+    </nav> 
+    <div class="pagewrapper">  
+        <main class="login-container">
+            <h2>Login</h2>
+
+            <label for="username">Username/Email</label>
+            <input type="text" id="username" placeholder="Enter Username/Email" required>
+
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="Enter Password" required>
+
+            <div class="form-options">
+                <label class="remember-me">
+                    <input type="checkbox" id="remember-me"> Remember me
+                </label>
+                <a href="#" class="forgot-password">Forgot password?</a>
+            </div>
+
+            <button id="loginButton" class="login-btn">Login</button>
+            <div id="output">?</div>
+        </main>
+    </div>
+
 </body>
 </html>
