--- a/messages.html
+++ b/messages.html
@@ -12,12 +12,12 @@
     <script src="./js/profile.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/messages.js"></script>
-    <link rel="stylesheet" href="./css/profile.css">
+    <link rel="stylesheet" href="./css/messages.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#"><h1>APROKO</h1></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
