--- a/new.html
+++ b/new.html
@@ -13,41 +13,46 @@
     <script src="./js/profile.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/new.js"></script>
-    <link rel="stylesheet" href="./css/profile.css">
+    <link rel="stylesheet" href="./css/new.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./messages.html">Posts</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./new.html">Add-Post</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Account
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./signup.html">Sign-Up</a></li>
-                  <li><a class="dropdown-item" href="./login.html">Login</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="./profile.html">Profile</a></li>
+    <body>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><h1>APROKO</h1></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./messages.html">Posts</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./new.html">Add-Post</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Account
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./signup.html">Sign-Up</a></li>
+                      <li><a class="dropdown-item" href="./login.html">Login</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="./profile.html">Profile</a></li>
+                    </ul>
+                  </li>
                 </ul>
-              </li>
-            </ul>
-          </div>
+              </div>
+            </div>
+        </nav>
+        
+        <div class="container" id="textContainer">
+            <input id="textInput" type="text" placeholder="Enter your text here">
+            <button id="sendTextButton">Send Text</button>
         </div>
-    </nav>
-    <input id="textInput"><button id="sendTextButton">Send Text</button>
 </body>
 </html>
