--- a/profile.html
+++ b/profile.html
@@ -3,43 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>Profile Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/profile.css">
+
 <body>
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <div class="dropdown">
-                <img src="./1stPic.jpg" id="profilePicture" alt="Profile" 
-                     class="rounded-circle" style="width: 40px; cursor: pointer;" 
-                     data-bs-toggle="dropdown" aria-expanded="false">
-                <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" href="profile.html">View Profile</a></li>
-                    <li><a class="dropdown-item" href="#">Edit Profile</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" id="logoutButton" href="#">Logout</a></li>
+          <a class="navbar-brand" href="#"><h1>APROKO</h1></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./messages.html">Posts</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./new.html">Add-Post</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Account
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="./login.html">Log-out</a></li>
                 </ul>
-            </div>
+              </li>
+            </ul>
+          </div>
         </div>
     </nav>
-
-    <!-- Profile Content -->
-    <div class="container mt-5">
+    <div class="profile-container">
         <h2>My Profile</h2>
-        <div class="mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input type="text" id="name" class="form-control" placeholder="Enter your name">
+        <div class="profile-pic">
+            <img src="default-profile.png" id="profileImage" alt="Profile Picture">
+            <button class="upload-btn" id="uploadBtn">📷</button>
+            <input type="file" id="fileInput" accept="image/*" style="display: none;">
         </div>
-        <div class="mb-3">
-            <label for="bio" class="form-label">Bio</label>
-            <textarea id="bio" class="form-control" rows="3" placeholder="Enter a bio"></textarea>
+        <div class="profile-details">
+            <input type="text" id="name" placeholder="Your Name">
+            <textarea id="bio" rows="3" placeholder="Tell us about yourself"></textarea>
+            <input type="email" id="email" placeholder="Your Email">
+            <button class="btn btn-primary" id="saveProfile">Save Changes</button>
         </div>
-        <button id="saveProfile" class="btn btn-primary">Save Changes</button>
+        <div id="responseMessage" class="text-success mt-3"></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/profile.js"></script>
 </body>
 </html>
