--- a/signup.html
+++ b/signup.html
@@ -12,47 +12,37 @@
     <script src="./js/profile.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/signup.js"></script>
-    <link rel="stylesheet" href="./css/profile.css">
+    <link rel="stylesheet" href="./css/signup.css">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./messages.html">Posts</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./new.html">Add-Post</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Account
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./signup.html">Sign-Up</a></li>
-                  <li><a class="dropdown-item" href="./login.html">Login</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="./profile.html">Profile</a></li>
+<body> 
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><h1>APROKO</h1></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Contact Us</a>
+                  </li>
                 </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
-    <main>
-        <label><span>Username/Email</span><input id="username" type="email"></label>
-        <label><span>Full Name</span><input id="fullName"></label>
-        <label><span>Password</span><input id="password" type="password"></label>
-        <button id="signUpButton">Sign-Up</button>
-        <div id="output">?</div>
-    </main>
+              </div>
+            </div>
+        </nav>
+    </header> 
+    <div class="signup-wrapper">
+        <main>
+            <label><span>Username/Email</span><input id="username" type="email"></label>
+            <label><span>Full Name</span><input id="fullName"></label>
+            <label><span>Password</span><input id="password" type="password"></label>
+            <button id="signUpButton">Sign-Up</button>
+            <div id="output">?</div>
+        </main>
+    </div>
 </body>
 </html>
