--- a/new.html
+++ b/new.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="./css/new.css">
 </head>
 <body>
-    <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><h1>APROKO</h1></a>
@@ -51,7 +50,8 @@
         </nav>
         
         <div class="container" id="textContainer">
-            <input id="textInput" type="text" placeholder="Enter your text here">
+            <input id="textInput"
+             type="text" placeholder="Enter your text here">
             <button id="sendTextButton">Send Text</button>
         </div>
 </body>
