update my profile page

--- a/profile.html
+++ b/profile.html
@@ -53,6 +53,7 @@
             <input type="text" id="name" placeholder="Your Name">
             <textarea id="bio" rows="3" placeholder="Tell us about yourself"></textarea>
             <input type="email" id="email" placeholder="Your Email">
+            <input type="password" id="password" placeholder="Update Your Password">
             <button class="btn btn-primary" id="saveProfile">Save Changes</button>
         </div>
         <div id="responseMessage" class="text-success mt-3"></div>
