Done with html, css and js

--- a/login.html
+++ b/login.html
@@ -61,13 +61,18 @@
                 <label class="remember-me">
                     <input type="checkbox" id="remember-me"> Remember me
                 </label>
-                <a href="#" class="forgot-password">Forgot password?</a>
+                <a href="/forgetpassword.html" class="forgot-password" target="_blank">Forgot password?</a>
             </div>
 
             <button id="loginButton" class="login-btn">Login</button>
-            <div id="output">?</div>
+            <div id="output"></div>
         </main>
     </div>
-
+    <footer>
+        <p>&copy; 2024 Aproko. All rights reserved.</p>
+        <div class="social">
+            <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">Twitter</a>
+        </div>
+    </footer>
 </body>
 </html>
