--- a/signup.html
+++ b/signup.html
@@ -37,12 +37,18 @@
     </header> 
     <div class="signup-wrapper">
         <main>
-            <label><span>Username/Email</span><input id="username" type="email"></label>
-            <label><span>Full Name</span><input id="fullName"></label>
-            <label><span>Password</span><input id="password" type="password"></label>
+            <label><span>Username/Email</span><input id="username" type="email" required></label>
+            <label><span>Full Name</span><input id="fullName" required></label>
+            <label><span>Password</span><input id="password" type="password" required></label>
             <button id="signUpButton">Sign-Up</button>
-            <div id="output">?</div>
+            <div id="output"></div>
         </main>
     </div>
+    <footer>
+      <p>&copy; 2024 Aproko. All rights reserved.</p>
+      <div class="social">
+          <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">Twitter</a>
+      </div>
+    </footer>
 </body>
 </html>
