--- a/index.html
+++ b/index.html
@@ -1,77 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>APROKO</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>APROKO</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/slideshow.js"></script>
-    <link rel="stylesheet" href="./css/index.css">
+  <script src="./js/main.js"></script>
+  <script src="./js/slideshow.js"></script>
+  <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"><h1>APROKO</h1></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./login.html">Posts</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Account
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="./signup.html">Sign-Up</a></li>
-                      <li><a class="dropdown-item" href="./login.html">Login</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </div>
-        </nav>
-    </header>
-    <div class="slideshow-container">
-      <div class="slides" style="display: block;">
-        <a href="./index.html">
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <h1>APROKO</h1>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./login.html">Posts</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Account
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="./signup.html">Sign-Up</a></li>
+                <li><a class="dropdown-item" href="./login.html">Login</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <div class="slideshow-container">
+    <div class="slides" style="display: block;">
+      <a href="./index.html">
         <img src="./img/yankee-doodle-pigeon-carrier-pigeon.jpg" alt="Slide 1" id="slide-image">
         <div class="caption">
-          Welcome To Aproko</div>
-      </div>
-      <div class="slides" style="display: none;">
-        <a href="./messages.html">
+          Welcome to the Aproko Blog
+        </div>
+    </div>
+    <div class="slides" style="display: none;">
+      <a href="./messages.html">
         <img src="./img/stayconnect.jpg" alt="Slide 2" id="slide-image">
         <div class="caption">
-          Stay Connected</div>
-      </div>
-      <div class="slides" style="display: none;">
-        <a href="./new.html">
+          Stay Connected
+        </div>
+    </div>
+    <div class="slides" style="display: none;">
+      <a href="./new.html">
         <img src="./img/talking-bird-species-7.jpg" alt="Slide 3" id="slide-image">
         <div class="caption">
           Share Your Thoughts
         </div>
-      </div>
-      
-      <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
-      <a class="next" onclick="changeSlide(1)">&#10095;</a>
     </div>
-    
-    <div class="dots">
-      <span onclick="currentSlide(1)"></span>
-      <span onclick="currentSlide(2)"></span>
-      <span onclick="currentSlide(3)"></span>
+
+    <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+    <a class="next" onclick="changeSlide(1)">&#10095;</a>
+  </div>
+
+  <div class="dots">
+    <span onclick="currentSlide(1)"></span>
+    <span onclick="currentSlide(2)"></span>
+    <span onclick="currentSlide(3)"></span>
+  </div>
+  <footer>
+    <p>&copy; 2024 Aproko. All rights reserved.</p>
+    <div class="social">
+      <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">Twitter</a>
     </div>
+  </footer>
 </body>
+
 </html>
