--- a/profile.html
+++ b/profile.html
@@ -1,64 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profile Page</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/profile.css">
+  <link rel="stylesheet" href="./css/profile.css">
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><h1>APROKO</h1></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./messages.html">Posts</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./new.html">Add-Post</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Account
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./login.html">Log-out</a></li>
-                </ul>
-              </li>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <h1>APROKO</h1>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./messages.html">Posts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./new.html">Add-Post</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Account
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="./login.html">Log-out</a></li>
             </ul>
-          </div>
-        </div>
-    </nav>
-    <div class="profile-container">
-        <h2>My Profile</h2>
-        <div class="profile-pic">
-            <img src="default-profile.png" id="profileImage" alt="Profile Picture">
-            <button class="upload-btn" id="uploadBtn">📷</button>
-            <input type="file" id="fileInput" accept="image/*" style="display: none;">
-        </div>
-        <div class="profile-details">
-            <input type="text" id="name" placeholder="Your Name">
-            <textarea id="bio" rows="3" placeholder="Tell us about yourself"></textarea>
-            <input type="email" id="email" placeholder="Your Email">
-            <input type="password" id="password" placeholder="Update Your Password">
-            <button class="btn btn-primary" id="saveProfile">Save Changes</button>
-        </div>
-        <div id="responseMessage" class="text-success mt-3"></div>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
+  <div class="profile-container">
+    <h2>My Profile</h2>
+    <div class="profile-pic">
+      <img src="default-profile.png" id="profileImage" alt="Profile Picture">
+      <button class="upload-btn" id="uploadBtn">📷</button>
+      <input type="file" id="fileInput" accept="image/*" style="display: none;">
+    </div>
+    <div class="profile-details">
+      <input type="text" id="name" placeholder="Your Name">
+      <textarea id="bio" rows="3" placeholder="Tell us about yourself"></textarea>
+      <input type="email" id="email" placeholder="Your Email">
+      <input type="password" id="password" placeholder="Update Your Password">
+      <button class="btn btn-primary" id="saveProfile">Save Changes</button>
+      <button class="btn btn-primary" id="logout">Log out</button>
+    </div>
+    <div id="responseMessage" class="text-success mt-3"></div>
+  </div>
+  <footer>
+    <p>&copy; 2024 Aproko. All rights reserved.</p>
+    <div class="social">
+        <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">Twitter</a>
+    </div>
+  </footer>
 
-    <script src="./js/profile.js"></script>
+  <script src="./js/profile.js"></script>
 </body>
+
 </html>
