--- a/index.html
+++ b/index.html
@@ -56,20 +56,23 @@
         <div class="caption">
           Welcome to the Aproko Blog
         </div>
+      </a>
     </div>
     <div class="slides" style="display: none;">
       <a href="./messages.html">
-        <img src="./img/stayconnect.jpg" alt="Slide 2" id="slide-image">
+        <img src="./img/stayconnect.jpg" alt="Slide 2" id="slide-imag">
         <div class="caption">
           Stay Connected
         </div>
+      </a>  
     </div>
     <div class="slides" style="display: none;">
       <a href="./new.html">
-        <img src="./img/talking-bird-species-7.jpg" alt="Slide 3" id="slide-image">
+        <img src="./img/talking-bird-species-7.jpg" alt="Slide 3" id="slide-ima">
         <div class="caption">
           Share Your Thoughts
         </div>
+      </a>  
     </div>
 
     <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
